[package]
name = "coap"
version = "0.1.0"
edition = "2021"

[dependencies]
lakers = { package = "lakers", path = "../../lib" }
lakers-ead-authz = { path = "../../ead/lakers-ead-authz" }
lakers-crypto = { path = "../../crypto/", features = [ "rustcrypto" ] }
hexlit = "0.5.3"
coap = { version = "0.13" }
coap-lite = { version = "0.11.3" }

std-embedded-nal = "^0.1.2"
embedded-nal-minimal-coapserver = "0.4"
embedded-nal = "0.6"
coap-message = "0.3"
coap-handler = "0.2"
coap-handler-implementations = "0.5"
coap-numbers = "0.2.3"
coap-message-utils = "0.3.1"

# Logging
env_logger = "0.11.3"
defmt-or-log = { version = "0.2.1", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["log"]
defmt = ["dep:defmt"]
log = ["dep:log"]