[package]
name = "edhoc-cc2538"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "edhoc-rs example on CC2538 SoC"

[dependencies]
edhoc-rs = { package = "lakers", path = "../../lib", default-features = false }
edhoc-crypto = { path = "../../crypto", default-features = false }
# depend on an allocator
embedded-alloc = "0.5.0"
hexlit = "0.5.3"
cc2538-pac = { version = "0.4.0", features = ["rt"] }
cc2538-hal = "0.2.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[features]
default = [ "psa" ]
psa = [ "edhoc-crypto/psa-baremetal" ]

