[package]
name = "edhoc-rs-no_std"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
edhoc-rs = { path = "../../lib", default-features = false }
hexlit = "0.5.3"

# depend on an allocator
static-alloc = { version = "0.2.3" }

# cortex-m specifics
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

[features]
default = [ "cc2538" ]
cc2538 = [ "edhoc-rs/hacspec-cc2538" ]
psa = [ "edhoc-rs/hacspec-psa" ]
