[package]
name = "edhoc-rs-no_std"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
edhoc-rs = { path = "../../lib", default-features = false }
hexlit = "0.5.3"

# depend on an allocator
embedded-alloc = "0.5.0"

# cortex-m specifics
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[features]
default = [ "rtt", "crypto-cryptocell310", "ead-none" ]
rtt = [ ]
crypto-psa = [ "edhoc-rs/crypto-psa-baremetal" ]
crypto-cryptocell310 = [ "edhoc-rs/crypto-cryptocell310" ]
crypto-mbedtls = [ "edhoc-rs/crypto-mbedtls" ]
ead-none = [ "edhoc-rs/ead-none" ]
ead-zeroconf = [ "edhoc-rs/ead-zeroconf" ]
