[package]
name = "edhoc-rs-no_std"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
edhoc-rs = { package = "lakers", path = "../../lib", default-features = false }
lakers-crypto = { path = "../../crypto", default-features = false }
hexlit = "0.5.3"

# depend on an allocator
embedded-alloc = "0.5.0"

# cortex-m specifics
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[features]
default = [ "rtt", "crypto-cryptocell310", "ead-none" ]
rtt = [ ]
crypto-psa = [ "lakers-crypto/psa-baremetal" ]
crypto-cryptocell310 = [ "lakers-crypto/cryptocell310" ]
ead-none = [ "edhoc-rs/ead-none" ]
ead-authz = [ "edhoc-rs/ead-authz" ]
